WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27129
AX: possible assertion for a non-native image in accessibility
https://bugs.webkit.org/show_bug.cgi?id=27129
Summary
AX: possible assertion for a non-native image in accessibility
chris fleizach
Reported
2009-07-09 14:33:23 PDT
if an image is programmatically created, its possible to reach an assert because its attempted to turn into a RenderImage
Attachments
patch
(4.86 KB, patch)
2009-07-09 14:38 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-07-09 14:38:38 PDT
Created
attachment 32532
[details]
patch
chris fleizach
Comment 2
2009-07-09 15:12:14 PDT
http://trac.webkit.org/changeset/45677
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug