Bug 27129 - AX: possible assertion for a non-native image in accessibility https://bugs.webkit.org/show_bug.cgi?id=27129

Canonical link: https://commits.webkit.org/37330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45677 268f45cc-cd09-0410-ab3c-d52691b4dbfc